<resources>
    <string name="app_name">MyCurrentLocation</string>
    <string name="string_base_transceiver_station">기지국 정보</string>
    <string name="string_latitude">위도</string>
    <string name="string_longitude">경도</string>
    <string name="string_altitude">고도</string>
    <string name="string_accuracy">정확도</string>
    <string name="string_get_current_location_and_list_of_wifi">현재 위치, 와이파이 리스트 얻기</string>
    <string name="string_ok">OK</string>
    <string name="string_settings">Settings</string>
    <string name="string_fine_location_permission_rationale">이 기능에는 앱을 사용하는 동안 위치 권한이 필요합니다.</string>
    <string name="string_fine_permission_denied_explanation">위치 권한 승인을 거부했지만 이 기능에는 위치 권한이 필요합니다.</string>
    <string name="string_permission_approved_explanation">위치 정보 권한 사용을 승인했습니다. 계속해서 클릭해주세요.</string>
</resources>