<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity"
        android:paddingTop="@dimen/dp_16"
        android:id="@+id/container">

        <LinearLayout
            android:id="@+id/lnl_cell_info"
            android:paddingBottom="@dimen/dp_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:layout_width="@dimen/dp_150"
                android:layout_height="wrap_content"
                android:text="@string/string_base_transceiver_station"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_cell_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnl_latitude"
            android:layout_width="@dimen/dp_80"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/lnl_longitude"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lnl_cell_info"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="0"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_latitude"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_num_latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/lnl_longitude"
            android:layout_width="@dimen/dp_80"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/lnl_altitude"
            app:layout_constraintStart_toEndOf="@+id/lnl_latitude"
            app:layout_constraintTop_toBottomOf="@+id/lnl_cell_info"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="0"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_longitude"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_num_longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnl_altitude"
            android:layout_width="@dimen/dp_80"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/lnl_accuracy"
            app:layout_constraintStart_toEndOf="@+id/lnl_longitude"
            app:layout_constraintTop_toBottomOf="@+id/lnl_cell_info"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="0"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_altitude"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_num_altitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnl_accuracy"
            android:layout_width="@dimen/dp_80"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/lnl_altitude"
            app:layout_constraintTop_toBottomOf="@+id/lnl_cell_info"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_accuracy"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/tv_num_accuracy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center" />
        </LinearLayout>

        <Button
            android:id="@+id/get_current_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_get_current_location_and_list_of_wifi"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lnl_accuracy"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="@dimen/dp_16"
            android:onClick="wifiScanAndLocationRequestOnClick" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_current_location_button"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_wifi"
            android:background="@color/black" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>